--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <main>
     <div class="flex-container">
       <div class="flex1">
-        <img src="images/logo.svg" class="logo" width="200">
-        <img src="images/illustration-mockups.svg" alt="mockup" class="mock">
+        <img src="logo.svg" class="logo" width="200">
+        <img src="illustration-mockups.svg" alt="mockup" class="mock">
 
       </div>
       <div class="flex2">
